navbar flexbox is working correctly.  Self portrait properly aligned beside name in intro section.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,14 +1,11 @@
 * {
     box-sizing: border-box;
-    background-color: slategray;
-    margin-top: 100px;
-}
-
-body {
-    display: flex;
-    flex-wrap: wrap;
+    display: block;
+    background-color: rgba(16, 19, 22, 0.824);
+    color: white;
+    margin: 0;
+    padding: 0;
     font-family: 'Times New Roman', Times, serif;
-    margin: 100px;
 }
 
 
@@ -16,15 +13,37 @@ h1 {
     font-size: 100px;
     font-weight: 400;
     text-align: center;
+    padding: 5%;
 }
 
-nav {
+/* making navbar independant of header.  will be set to right and responsive */
+nav ul {
     display: flex;
     flex-direction: row;
-    
+    flex-wrap: wrap;
+    justify-content: right;
+}
+
+nav ul li{
+    padding: 10px;
+}
+
+/* removing underline from navbar links*/
+nav ul li a {
+    text-decoration: none;
+}
+
+/* Initial bar containing photo and quick description */
+.Intro {
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 1;
+    background-color: rgb(10, 40, 40);
+
 }
 
 #mySelfie{
-    width: 10%;
-    height: 10%;
+    margin: 20px;
+    width: 300px;
+    height: 150x; 
 }
